--- a/Hands-on_Ex/Hands-on_Ex08/Hands-on_Ex08.qmd
+++ b/Hands-on_Ex/Hands-on_Ex08/Hands-on_Ex08.qmd
@@ -17,7 +17,7 @@ format:
 
 Choropleth mapping involves the symbolisation of enumeration units, such as countries, provinces, states, counties or census units, using area patterns or graduated colors. For example, a social scientist may need to use a choropleth map to portray the spatial distribution of aged population of Singapore by Master Plan 2014 Subzone Boundary.
 
-In this chapter, you will learn how to plot functional and truthful choropleth maps by using an R package called [tmap](https://r-tmap.github.io/tmap/) package.
+In this chapter, I will plot a functional and truthful choropleth maps by using an R package called [tmap](https://r-tmap.github.io/tmap/) package.
 
 ::: {.callout-tip title="Tip"}
 It is advisable to read the functional description of each function before using them.
@@ -63,7 +63,7 @@ mpsz <- st_read(dsn = "data/geospatial",
                 layer = "MP14_SUBZONE_WEB_PL")
 ```
 
-You can examine the content of [mpsz]{style="color:purple;"} by using the code chunk below.
+I can examine the content of [mpsz]{style="color:purple;"} by using the code chunk below.
 
 ```{r}
 mpsz
@@ -83,7 +83,7 @@ popdata <- read_csv("data/aspatial/respopagesextod2011to2020.csv")
 
 ### 21.3.4 Data Preparation
 
-Before a thematic map can be prepared, you are required to prepare a data table with year 2020 values. The data table should include the variables PA, SZ, YOUNG, ECONOMY ACTIVE, AGED, TOTAL, DEPENDENCY.
+Before a thematic map can be prepared, I am required to prepare a data table with year 2020 values. The data table should include the variables PA, SZ, YOUNG, ECONOMY ACTIVE, AGED, TOTAL, DEPENDENCY.
 
 -   YOUNG: age group 0 to 4 until age groyup 20 to 24,
 -   ECONOMY ACTIVE: age group 25-29 until age group 60-64,
@@ -95,8 +95,8 @@ Before a thematic map can be prepared, you are required to prepare a data table 
 
 The following data wrangling and transformation functions will be used:
 
-- *pivot_wider()* of **tidyr** package, and
-- *mutate(), filter(), group_by()* and *select()* of **dplyr** package
+-   *pivot_wider()* of **tidyr** package, and
+-   *mutate(), filter(), group_by()* and *select()* of **dplyr** package
 
 ```{r}
 popdata2020 <- popdata %>%
@@ -138,7 +138,7 @@ mpsz_pop2020 <- left_join(mpsz, popdata2020,
 
 Thing to learn from the code chunk above:
 
-- *left_join()* of **dplyr** package is used with mpsz simple feature data frame as the left data table is to ensure that the output will be a simple features data frame.
+-   *left_join()* of **dplyr** package is used with mpsz simple feature data frame as the left data table is to ensure that the output will be a simple features data frame.
 
 ```{r}
 write_rds(mpsz_pop2020, "data/rds/mpszpop2020.rds")
@@ -148,8 +148,8 @@ write_rds(mpsz_pop2020, "data/rds/mpszpop2020.rds")
 
 Two approaches can be used to prepare thematic map using tmap, they are:
 
-- Plotting a thematic map quickly by using qtm().
-- Plotting highly customisable thematic map by using tmap elements.
+-   Plotting a thematic map quickly by using qtm().
+-   Plotting highly customisable thematic map by using tmap elements.
 
 ### 21.4.1 Plotting a choropleth map quickly by using qtm()
 
@@ -165,8 +165,8 @@ qtm(mpsz_pop2020,
 
 Things to learn from the code chunk above:
 
-- *tmap_mode()* with “plot” option is used to produce a static map. For interactive mode, “view” option should be used.
-- *fill* argument is used to map the attribute (i.e. DEPENDENCY)
+-   *tmap_mode()* with “plot” option is used to produce a static map. For interactive mode, “view” option should be used.
+-   *fill* argument is used to map the attribute (i.e. DEPENDENCY)
 
 ### 21.4.2 Creating a choropleth map by using tmap’s elements
 
@@ -190,7 +190,7 @@ tm_shape(mpsz_pop2020)+
              position = c("left", "bottom"))
 ```
 
-In the following sub-section, we will share with you tmap functions that used to plot these elements.
+In the following sub-section, we will share the tmap functions that used to plot these elements.
 
 #### 21.4.2.1 Drawing a base map
 
@@ -214,9 +214,9 @@ tm_shape(mpsz_pop2020)+
 
 Things to learn from *tm_polygons()*:
 
-- The default interval binning used to draw the choropleth map is called “pretty”. A detailed discussion of the data classification methods supported by **tmap** will be provided in sub-section 4.3.
-- The default colour scheme used is [YlOrRd]{style="color:purple;"} of ColorBrewer. You will learn more about the color scheme in sub-section 4.4.
-- By default, Missing value will be shaded in grey.
+-   The default interval binning used to draw the choropleth map is called “pretty”. A detailed discussion of the data classification methods supported by **tmap** will be provided in sub-section 4.3.
+-   The default colour scheme used is [YlOrRd]{style="color:purple;"} of ColorBrewer. I will explore and learn more about the color scheme in sub-section 4.4.
+-   By default, Missing value will be shaded in grey.
 
 #### 21.4.2.3 Drawing a choropleth map using tm_fill() and *tm_border()*
 
@@ -246,9 +246,9 @@ The *alpha* argument is used to define transparency number between 0 (totally tr
 
 Beside *alpha* argument, there are three other arguments for tm_borders(), they are:
 
-- *col* = border colour,
-- *lwd* = border line width. The default is 1, and
-- *lty* = border line type. The default is “solid”.
+-   *col* = border colour,
+-   *lwd* = border line width. The default is 1, and
+-   *lty* = border line type. The default is “solid”.
 
 ### 21.4.3 Data classification methods of tmap
 
@@ -258,8 +258,7 @@ Most choropleth maps employ some methods of data classification. The point of cl
 
 To define a data classification method, the style argument of *tm_fill()* or *tm_polygons()* will be used.
 
-21.4.3.1 Plotting choropleth maps with built-in classification methods
-The code chunk below shows a quantile data classification that used 5 classes.
+21.4.3.1 Plotting choropleth maps with built-in classification methods The code chunk below shows a quantile data classification that used 5 classes.
 
 #### 21.4.3.1 Plotting choropleth maps with built-in classification methods
 
@@ -289,9 +288,65 @@ Notice that the distribution of quantile data classification method are more eve
 
 Warning: Maps Lie!
 
-DIY: Using what you had learned, prepare choropleth maps by using different classification methods supported by tmap and compare their differences.
+DIY: Using what I have learned, I prepared choropleth maps by using different classification methods supported by tmap and compare their differences.
+
+::: panel-tabset
+#### DIY Graph 1
+
+```{r}
+tm_shape(mpsz_pop2020)+
+  tm_polygons("DEPENDENCY",
+      fill.scale = tm_scale_intervals(
+        style = "kmeans",
+        n = 5)) +
+  tm_borders(fill_alpha = 0.5)
+```
+
+#### DIY Graph 2
+
+```{r}
+tm_shape(mpsz_pop2020)+
+  tm_polygons("DEPENDENCY",
+      fill.scale = tm_scale_intervals(
+        style = "fisher",
+        n = 5)) +
+  tm_borders(fill_alpha = 0.5)
+```
+:::
+
+::: {.callout-note title="Note"}
+By changing the "style", visually the colour code for the blue "dependency ratios" are slightly different. (darker for Graph 1)
+:::
 
 DIY: Preparing choropleth maps by using similar classification method but with different numbers of classes (i.e. 2, 6, 10, 20). Compare the output maps, what observation can you draw?
+
+::: panel-tabset
+#### DIY Graph 3
+
+```{r}
+tm_shape(mpsz_pop2020)+
+  tm_polygons("DEPENDENCY",
+      fill.scale = tm_scale_intervals(
+        style = "kmeans",
+        n = 12)) +
+  tm_borders(fill_alpha = 0.5)
+```
+
+#### DIY Graph 4
+
+```{r}
+tm_shape(mpsz_pop2020)+
+  tm_polygons("DEPENDENCY",
+      fill.scale = tm_scale_intervals(
+        style = "fisher",
+        n = 18)) +
+  tm_borders(fill_alpha = 0.5)
+```
+:::
+
+::: {.callout-note title="Note"}
+By changing the numbers "n", we can see difference in colour ranges based on the "dependency ratios" with a wider spread of ratio value correlating to the additional colour code details. (Graph 4 has a wider ratio and range of colours compared to Graph 3)
+:::
 
 #### 21.4.3.2 Plotting choropleth map with custome break
 
@@ -315,9 +370,11 @@ tm_shape(mpsz_pop2020)+
 ```
 
 ### 21.4.4 Colour Scheme
+
 **tmap** supports colour ramps either defined by the user or a set of predefined colour ramps from the **RColorBrewer** package.
 
 #### 21.4.4.1 Using ColourBrewer palette
+
 To change the colour, we assign the preferred colour to *values* argument of *tm_scale_intervals()* as shown in the code chunk below.
 
 ```{r}
@@ -351,6 +408,7 @@ Notice that the colour scheme has been reversed.
 Map layout refers to the combination of all map elements into a cohensive map. Map elements include among others the objects to be mapped, the title, the scale bar, the compass, margins and aspects ratios. Colour settings and data classification methods covered in the previous section relate to the palette and break-points are used to affect how the map looks.
 
 #### 21.4.5.1 Map Legend
+
 In **tmap**, several [tm_legend()]{style="color:purple;"} options are provided to change the placement, format and appearance of the legend.
 
 ```{r}
@@ -367,6 +425,7 @@ tm_shape(mpsz_pop2020)+
 ```
 
 #### 21.4.5.2 Map style
+
 **tmap** allows a wide variety of layout settings to be changed. They can be called by using *tmap_style()*.
 
 The code chunk below shows the classic style is used.
@@ -380,8 +439,7 @@ tm_shape(mpsz_pop2020)+
   tmap_style("classic")
 ```
 
-21.4.5.3 Cartographic Furniture
-Beside map style, **tmap** also also provides arguments to draw other map furniture such as compass, scale bar and grid lines.
+21.4.5.3 Cartographic Furniture Beside map style, **tmap** also also provides arguments to draw other map furniture such as compass, scale bar and grid lines.
 
 In the code chunk below, *tm_compass(), tm_scale_bar()* and *tm_grid()* are used to add compass, scale bar and grid lines onto the choropleth map.
 
@@ -415,9 +473,9 @@ tmap_style("white")
 
 In **tmap**, small multiple maps can be plotted in three ways:
 
-- by assigning multiple values to at least one of the asthetic arguments,
-- by defining a group-by variable in tm_facets(), and
-- by creating multiple stand-alone maps with tmap_arrange().
+-   by assigning multiple values to at least one of the asthetic arguments,
+-   by defining a group-by variable in tm_facets(), and
+-   by creating multiple stand-alone maps with tmap_arrange().
 
 #### 21.4.6.1 By assigning multiple values to at least one of the aesthetic arguments
 
@@ -462,6 +520,7 @@ tm_shape(mpsz_pop2020) +
 ```
 
 #### 21.4.6.3 By creating multiple stand-alone maps with [tmap_arrange()]{style="color:purple;"}
+
 In this example, multiple small choropleth maps are created by creating multiple stand-alone maps with [tmap_arrange()]{style="color:purple;"}.
 
 ```{r}
@@ -480,7 +539,7 @@ tmap_arrange(youngmap, agedmap, asp=1, ncol=2)
 
 ### 21.4.7 Mappping Spatial Object Meeting a Selection Criterion
 
-Instead of creating small multiple choropleth map, you can also use selection funtion to map spatial objects meeting the selection criterion.
+Instead of creating small multiple choropleth map, I can also use selection funtion to map spatial objects meeting the selection criterion.
 
 ```{r}
 tm_shape(mpsz_pop2020[mpsz_pop2020$REGION_N=="CENTRAL REGION", ])+
@@ -502,37 +561,38 @@ tm_shape(mpsz_pop2020[mpsz_pop2020$REGION_N=="CENTRAL REGION", ])+
 
 ### 21.5.1 All about tmap package
 
-- [tmap: Thematic Maps in R](https://www.jstatsoft.org/article/view/v084i06)
-- [tmap](https://cran.r-project.org/web/packages/tmap/index.html)
-- [tmap: get started!](https://cran.r-project.org/web/packages/tmap/vignettes/tmap-getstarted.html)
-- [tmap: changes in version 2.0](https://cran.r-project.org/web/packages/tmap/vignettes/tmap-changes-v2.html)
-- [tmap: creating thematic maps in a flexible way (useR!2015)](http://von-tijn.nl/tijn/research/presentations/tmap_user2015.pdf)
-- [Exploring and presenting maps with tmap (useR!2017)](http://von-tijn.nl/tijn/research/presentations/tmap_user2017.pdf)
+-   [tmap: Thematic Maps in R](https://www.jstatsoft.org/article/view/v084i06)
+-   [tmap](https://cran.r-project.org/web/packages/tmap/index.html)
+-   [tmap: get started!](https://cran.r-project.org/web/packages/tmap/vignettes/tmap-getstarted.html)
+-   [tmap: changes in version 2.0](https://cran.r-project.org/web/packages/tmap/vignettes/tmap-changes-v2.html)
+-   [tmap: creating thematic maps in a flexible way (useR!2015)](http://von-tijn.nl/tijn/research/presentations/tmap_user2015.pdf)
+-   [Exploring and presenting maps with tmap (useR!2017)](http://von-tijn.nl/tijn/research/presentations/tmap_user2017.pdf)
 
 ### 21.5.2 Geospatial data wrangling
 
-- [sf: Simple Features for R](https://cran.r-project.org/web/packages/sf/index.html)
-- [Simple Features for R: StandardizedSupport for Spatial Vector Data](https://journal.r-project.org/archive/2018/RJ-2018-009/RJ-2018-009.pdf)
-- [Reading, Writing and Converting Simple Features](https://cran.r-project.org/web/packages/sf/vignettes/sf2.html)
+-   [sf: Simple Features for R](https://cran.r-project.org/web/packages/sf/index.html)
+-   [Simple Features for R: StandardizedSupport for Spatial Vector Data](https://journal.r-project.org/archive/2018/RJ-2018-009/RJ-2018-009.pdf)
+-   [Reading, Writing and Converting Simple Features](https://cran.r-project.org/web/packages/sf/vignettes/sf2.html)
 
 ### 21.5.3 Data wrangling
 
-- [dplyr](https://dplyr.tidyverse.org/)
-- [Tidy data](https://cran.r-project.org/web/packages/tidyr/vignettes/tidy-data.html)
-- [tidyr: Easily Tidy Data with ‘spread()’ and ‘gather()’ Functions](https://cran.r-project.org/web/packages/tidyr/tidyr.pdf)
+-   [dplyr](https://dplyr.tidyverse.org/)
+-   [Tidy data](https://cran.r-project.org/web/packages/tidyr/vignettes/tidy-data.html)
+-   [tidyr: Easily Tidy Data with ‘spread()’ and ‘gather()’ Functions](https://cran.r-project.org/web/packages/tidyr/tidyr.pdf)
 
 # 22 Visualising Geospatial Point Data
 
-## 22.3 Overview 
+## 22.3 Overview
 
-Proportional symbol maps (also known as graduate symbol maps) are a class of maps that use the visual variable of size to represent differences in the magnitude of a discrete, abruptly changing phenomenon, e.g. counts of people. Like choropleth maps, you can create classed or unclassed versions of these maps. The classed ones are known as range-graded or graduated symbols, and the unclassed are called proportional symbols, where the area of the symbols are proportional to the values of the attribute being mapped. In this hands-on exercise, you will learn how to create a proportional symbol map showing the number of wins by Singapore Pools’ outlets using an R package called **tmap**.
+Proportional symbol maps (also known as graduate symbol maps) are a class of maps that use the visual variable of size to represent differences in the magnitude of a discrete, abruptly changing phenomenon, e.g. counts of people. Like choropleth maps, I can create classed or unclassed versions of these maps. The classed ones are known as range-graded or graduated symbols, and the unclassed are called proportional symbols, where the area of the symbols are proportional to the values of the attribute being mapped. In this hands-on exercise, I will explore and learn how to create a proportional symbol map showing the number of wins by Singapore Pools’ outlets using an R package called **tmap**.
 
 ### 22.3.1 Learning outcome
-By the end of this hands-on exercise, you will acquire the following skills by using appropriate R packages:
 
-- To import an aspatial data file into R.
-- To convert it into simple point feature data frame and at the same time, to assign an appropriate projection reference to the newly create simple point feature data frame.
-- To plot interactive proportional symbol maps.
+By the end of this hands-on exercise, we will acquire the following skills by using appropriate R packages:
+
+-   To import an aspatial data file into R.
+-   To convert it into simple point feature data frame and at the same time, to assign an appropriate projection reference to the newly create simple point feature data frame.
+-   To plot interactive proportional symbol maps.
 
 ## 22.4 Getting Started
 
@@ -545,6 +605,7 @@ pacman::p_load(sf, tmap, tidyverse)
 ## 22.5 Geospatial Data Wrangling
 
 ### 22.5.1 The data
+
 The data set use for this hands-on exercise is called *SGPools_svy21*. The data is in csv file format.
 
 Figure below shows the first 15 records of SGPools_svy21.csv. It consists of seven columns. The XCOORD and YCOORD columns are the x-coordinates and y-coordinates of SingPools outlets and branches. They are in [Singapore SVY21 Projected Coordinates System](https://www.sla.gov.sg/sirent/CoordinateSystems.aspx).
@@ -581,21 +642,20 @@ sgpools_sf <- st_as_sf(sgpools,
 
 Things to learn from the arguments above:
 
-- The *coords* argument requires you to provide the column name of the x-coordinates first then followed by the column name of the y-coordinates.
-- The *crs* argument required you to provide the coordinates system in epsg format. [EPSG: 3414](https://epsg.io/3414) is Singapore SVY21 Projected Coordinate System. You can search for other country’s epsg code by refering to [epsg.io](https://epsg.io/).
+-   The *coords* argument requires you to provide the column name of the x-coordinates first then followed by the column name of the y-coordinates.
+-   The *crs* argument required me to provide the coordinates system in epsg format. [EPSG: 3414](https://epsg.io/3414) is Singapore SVY21 Projected Coordinate System. I can search for other country’s epsg code by referring to [epsg.io](https://epsg.io/).
 
 Figure below shows the data table of sgpools_sf. Notice that a new column called geometry has been added into the data frame.
 
 ![](images/image2.jpg){fig-align="center"}
 
-You can display the basic information of the newly created sgpools_sf by using the code chunk below.
+I can display the basic information of the newly created sgpools_sf by using the code chunk below.
 
 ```{r}
 list(sgpools_sf)
 ```
 
 The output shows that sgppols_sf is in point feature class. It’s epsg ID is 3414. The bbox provides information of the extend of the geospatial data.
-
 
 ## 22.6 Drawing Proportional Symbol Map
 
@@ -658,7 +718,7 @@ tm_shape(sgpools_sf) +
             sync = TRUE)
 ```
 
-Before you end the session, it is wiser to switch **tmap**’s Viewer back to plot mode by using the code chunk below.
+Before we end the session, it is wiser to switch **tmap**’s Viewer back to plot mode by using the code chunk below.
 
 ```{r}
 tmap_mode("plot")
@@ -668,40 +728,42 @@ tmap_mode("plot")
 
 ### 22.7.1 All about tmap package
 
-- [tmap: Thematic Maps in R](https://www.jstatsoft.org/article/view/v084i06)
-- [tmap](https://cran.r-project.org/web/packages/tmap/index.html)
-- [tmap: get started!](https://cran.r-project.org/web/packages/tmap/vignettes/tmap-getstarted.html)
-- [tmap: changes in version 2.0](https://cran.r-project.org/web/packages/tmap/vignettes/tmap-changes-v2.html)
-- [tmap: creating thematic maps in a flexible way (useR!2015)](http://von-tijn.nl/tijn/research/presentations/tmap_user2015.pdf)
-- [Exploring and presenting maps with tmap (useR!2017)](http://von-tijn.nl/tijn/research/presentations/tmap_user2017.pdf)
+-   [tmap: Thematic Maps in R](https://www.jstatsoft.org/article/view/v084i06)
+-   [tmap](https://cran.r-project.org/web/packages/tmap/index.html)
+-   [tmap: get started!](https://cran.r-project.org/web/packages/tmap/vignettes/tmap-getstarted.html)
+-   [tmap: changes in version 2.0](https://cran.r-project.org/web/packages/tmap/vignettes/tmap-changes-v2.html)
+-   [tmap: creating thematic maps in a flexible way (useR!2015)](http://von-tijn.nl/tijn/research/presentations/tmap_user2015.pdf)
+-   [Exploring and presenting maps with tmap (useR!2017)](http://von-tijn.nl/tijn/research/presentations/tmap_user2017.pdf)
 
 ### 22.7.2 Geospatial data wrangling
 
-- [sf: Simple Features for R](https://cran.r-project.org/web/packages/sf/index.html)
-- [Simple Features for R: StandardizedSupport for Spatial Vector Data](https://journal.r-project.org/archive/2018/RJ-2018-009/RJ-2018-009.pdf)
-- [Reading, Writing and Converting Simple Features](https://cran.r-project.org/web/packages/sf/vignettes/sf2.html)
+-   [sf: Simple Features for R](https://cran.r-project.org/web/packages/sf/index.html)
+-   [Simple Features for R: StandardizedSupport for Spatial Vector Data](https://journal.r-project.org/archive/2018/RJ-2018-009/RJ-2018-009.pdf)
+-   [Reading, Writing and Converting Simple Features](https://cran.r-project.org/web/packages/sf/vignettes/sf2.html)
 
 ### 22.7.3 Data wrangling
 
-- [dplyr](https://dplyr.tidyverse.org/)
-- [Tidy data](https://cran.r-project.org/web/packages/tidyr/vignettes/tidy-data.html)
-- [tidyr: Easily Tidy Data with ‘spread()’ and ‘gather()’ Functions](https://cran.r-project.org/web/packages/tidyr/tidyr.pdf)
+-   [dplyr](https://dplyr.tidyverse.org/)
+-   [Tidy data](https://cran.r-project.org/web/packages/tidyr/vignettes/tidy-data.html)
+-   [tidyr: Easily Tidy Data with ‘spread()’ and ‘gather()’ Functions](https://cran.r-project.org/web/packages/tidyr/tidyr.pdf)
 
 # 23 Analytical Mapping
 
 ## 23.1 Overview
 
 ### 23.1.1 Objectives
-In this in-class exercise, you will gain hands-on experience on using appropriate R methods to plot analytical maps.
+
+In this in-class exercise, we will gain hands-on experience on using appropriate R methods to plot analytical maps.
 
 ### 23.1.2 Learning outcome
-By the end of this in-class exercise, you will be able to use appropriate functions of tmap and tidyverse to perform the following tasks:
 
-- Importing geospatial data in rds format into R environment.
-- Creating cartographic quality choropleth maps by using appropriate tmap functions.
-- Creating rate map
-- Creating percentile map
-- Creating boxmap
+By the end of this in-class exercise, we will be able to use appropriate functions of tmap and tidyverse to perform the following tasks:
+
+-   Importing geospatial data in rds format into R environment.
+-   Creating cartographic quality choropleth maps by using appropriate tmap functions.
+-   Creating rate map
+-   Creating percentile map
+-   Creating boxmap
 
 ## 23.2 Getting Started
 
@@ -756,6 +818,7 @@ tmap_arrange(p2, p1, nrow = 1)
 In much of our readings we have now seen the importance to map rates rather than counts of things, and that is for the simple reason that water points are not equally distributed in space. That means that if we do not account for how many water points are somewhere, we end up mapping total water point size rather than our topic of interest.
 
 ### 23.4.1 Deriving Proportion of Functional Water Points and Non-Functional Water Points
+
 We will tabulate the proportion of functional water points and the proportion of non-functional water points in each LGA. In the following code chunk, mutate() from dplyr package is used to derive two fields, namely pct_functional and pct_nonfunctional.
 
 ```{r}
@@ -789,6 +852,7 @@ Extreme value maps are variations of common choropleth maps where the classifica
 The percentile map is a special type of quantile map with six specific categories: 0-1%,1-10%, 10-50%,50-90%,90-99%, and 99-100%. The corresponding breakpoints can be derived by means of the base R quantile command, passing an explicit vector of cumulative probabilities as c(0,.01,.1,.5,.9,.99,1). Note that the begin and endpoint need to be included.
 
 #### 23.5.1.1 Data Preparation
+
 Step 1: Exclude records with NA by using the code chunk below.
 
 ```{r}
@@ -813,9 +877,9 @@ When variables are extracted from an sf data.frame, the geometry is extracted as
 
 Writing a function has three big advantages over using copy-and-paste:
 
-- You can give a function an evocative name that makes your code easier to understand.
-- As requirements change, you only need to update code in one place, instead of many.
-- You eliminate the chance of making incidental mistakes when you copy and paste (i.e. updating a variable name in one place, but not in another).
+-   I can give a function an evocative name that makes your code easier to understand.
+-   As requirements change, I only need to update code in one place, instead of many.
+-   I eliminate the chance of making incidental mistakes when I copy and paste (i.e. updating a variable name in one place, but not in another).
 
 Source: [Chapter 19: Functions](https://r4ds.had.co.nz/functions.html#functions) of **R for Data Science**.
 
@@ -823,12 +887,12 @@ Source: [Chapter 19: Functions](https://r4ds.had.co.nz/functions.html#functions)
 
 Firstly, we will write an R function as shown below to extract a variable (i.e. *wp_nonfunctional*) as a vector out of an sf data.frame.
 
-- arguments:
-  - vname: variable name (as character, in quotes)
-  - df: name of sf data frame
-- returns:
-  - v: vector with values (without a column name)
-  
+-   arguments:
+    -   vname: variable name (as character, in quotes)
+    -   df: name of sf data frame
+-   returns:
+    -   v: vector with values (without a column name)
+
 ```{r}
 get.var <- function(vname,df) {
   v <- df[vname] %>% 
@@ -882,19 +946,19 @@ ggplot(data = NGA_wp,
   geom_boxplot()
 ```
 
-- Displaying summary statistics on a choropleth map by using the basic principles of boxplot.
+-   Displaying summary statistics on a choropleth map by using the basic principles of boxplot.
 
-- To create a box map, a custom breaks specification will be used. However, there is a complication. The break points for the box map vary depending on whether lower or upper outliers are present.
+-   To create a box map, a custom breaks specification will be used. However, there is a complication. The break points for the box map vary depending on whether lower or upper outliers are present.
 
 #### 23.5.2.1 Creating the boxbreaks function
 
 The code chunk below is an R function that creating break points for a box map.
 
-- arguments:
-  - v: vector with observations
-  - mult: multiplier for IQR (default 1.5)
-- returns:
-  - bb: vector with 7 break points compute quartile and fences
+-   arguments:
+    -   v: vector with observations
+    -   mult: multiplier for IQR (default 1.5)
+-   returns:
+    -   bb: vector with 7 break points compute quartile and fences
 
 ```{r}
 boxbreaks <- function(v,mult=1.5) {
@@ -928,11 +992,11 @@ boxbreaks <- function(v,mult=1.5) {
 
 The code chunk below is an R function to extract a variable as a vector out of an sf data frame.
 
-- arguments:
-  - vname: variable name (as character, in quotes)
-  - df: name of sf data frame
-- returns:
-  - v: vector with values (without a column name)
+-   arguments:
+    -   vname: variable name (as character, in quotes)
+    -   df: name of sf data frame
+-   returns:
+    -   v: vector with values (without a column name)
 
 ```{r}
 get.var <- function(vname,df) {
